# mobile_rag_engine

./: .gitignore  .pubignore  CHANGELOG.md  DEVELOPMENT.md  README.md  TODO.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  refrag-develop.md
.github/workflows/: build-binaries.yml  ci.yml  precompile.yml
docs/features/: adjacent_chunk_retrieval.md  index_management.md  markdown_chunker.md  prompt_compression.md  search_by_source.md  search_strategies.md
docs/guides/: architecture_guide.md  faq.md  model_setup.md  quick_start.md  troubleshooting.md
docs/implementation/: rag_context_comprehensive.md
docs/test/: testing_tiers.md  unit_testing.md
example/: README.md  example.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/evalsets/: week1_evalset_v1.jsonl  week1_sources_manifest.json
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  offline_eval_runner.dart  pdf_quality_compare_runner.dart  quality_smoke_runner.dart
example/lib/screens/: benchmark_screen.dart  chunking_test_screen.dart  quality_test_screen.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
lib/: main.dart  mobile_rag.dart  mobile_rag_engine.dart
lib/screens/: chunking_test_screen.dart  quality_test_screen.dart
lib/services/: benchmark_service.dart  chunking_service.dart  context_builder.dart  document_parser.dart  embedding_service.dart  intent_parser.dart  prompt_compressor.dart  quality_test_service.dart  rag_config.dart  rag_engine.dart  source_rag_service.dart  text_chunker.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/utils/: error_utils.dart
local-gemma-macos/: .gitignore  README.md  pubspec.yaml
local-gemma-macos/lib/: main.dart
local-gemma-macos/lib/models/: chat_models.dart
local-gemma-macos/lib/screens/: model_setup_screen.dart  rag_chat_screen.dart
local-gemma-macos/lib/services/: ollama_response_service.dart  query_intent_handler.dart  query_understanding_service.dart  topic_suggestion_service.dart
local-gemma-macos/lib/widgets/: chat_input_area.dart  chunk_detail_sidebar.dart  document_style_response.dart  knowledge_graph_panel.dart  slash_command_overlay.dart  suggestion_chips.dart
local-gemma-macos/test/: analyze_topic_suggestion_test.dart  widget_test.dart
patch_notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md
rust/: Cargo.toml  cargokit.yaml.bak  functions.md
rust/src/: frb_generated.rs
rust/src/api/: bm25_search.rs  compression_utils.rs  document_parser.rs  hnsw_index.rs  hybrid_search.rs  mod.rs  semantic_chunker.rs  simple_rag.rs  source_rag.rs  tokenizer.rs  user_intent.rs
rust_builder/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rag_engine_flutter.podspec  rust_lib_mobile_rag_engine.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rag_engine_flutter.podspec
rust_builder/rust/: Cargo.toml  functions.md
rust_builder/rust/.cargo/: config.toml
rust_builder/rust/src/: frb_generated.rs  lib.rs
rust_builder/rust/src/api/: bm25_search.rs  compression_utils.rs  db_pool.rs  document_parser.rs  error.rs  hnsw_index.rs  hybrid_search.rs  incremental_index.rs  logger.rs  mod.rs  semantic_chunker.rs  simple.rs  simple_rag.rs  source_rag.rs  tokenizer.rs  user_intent.rs
rust_builder/windows/: CMakeLists.txt
scripts/: build_android.sh  build_ios.sh  clean_native_build.sh  test_ci.sh
test/: smart_error_test.dart  widget_test.dart
test/native/: smart_error_test.dart
test/unit/: context_builder_regression_test.dart  mobile_rag_mock_test.dart  prompt_compressor_test.dart
test_app/: .gitignore  README.md
(+25 files in other folders)
