[package]
name = "rust_lib_mobile_rag_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.100"
rusqlite = { version = "0.37.0", features = ["bundled"] }
ndarray = "0.17.1"
log = "0.4.29"
once_cell = "1.21"

# Tokenizer for text preprocessing
# Using fancy-regex instead of onig for iOS cross-compilation compatibility
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex", "http"] }

# HNSW vector indexing for O(log n) search
instant-distance = "0.6"
bincode = "1.3"

# Content hash for deduplication
sha2 = "0.10"

# ort 크레이트 제거: iOS에서 libonnxruntime.dylib 로딩 실패
# ONNX 추론은 Flutter onnxruntime 패키지로 이동

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
