[package]
name = "rag_engine_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.100"
rusqlite = { version = "0.38.0", features = ["bundled"] }
ndarray = "0.17.1"
log = "0.4.29"
once_cell = "1.21"

# Tokenizer for text preprocessing
# Using fancy-regex instead of onig for iOS cross-compilation compatibility
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex", "http"] }

# HNSW vector indexing for O(log n) search
hnsw_rs = "0.3"

# Serialization for saving/loading index
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Content hash for deduplication
sha2 = "0.10"

# Semantic text splitting with Unicode sentence/word boundaries
text-splitter = { version = "0.29.3", default-features = false }

# Document-to-Text (DTT) - PDF and DOCX text extraction
pdf-extract = "0.7"
docx-lite = "0.2"

# Regex for PDF dehyphenation (fix line-break word splits)
regex = "1.11"

# Removed 'ort' crate: failed to load libonnxruntime.dylib on iOS
# ONNX inference moved to Flutter onnxruntime package

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
